Fixed buttons appearing below CSS grid area, re-aligned player name entry boxes.

--- a/style.css
+++ b/style.css
@@ -13,15 +13,19 @@
 #p1NameEntry {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    width: 130px;
+    width: 90px;
+    margin-top: 5px;
     justify-self: start;
     align-self: start;
 }
 
 #p1NameSubmit {
+    display: grid;
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    margin-bottom: 10px;
+    height: 20px;
+    width: 60px;
+    margin-top: 10px;
     justify-self: center;
     align-self: end;
 }
@@ -29,17 +33,21 @@
 #p2NameEntry {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
-    width: 130px;
+    width: 90px;
+    margin-top: 5px;
     justify-self: start;
     align-self: start;
 }
 
 #p2NameSubmit {
+    display: grid;
     grid-column: 3 / 4;
     grid-row: 2 / 3;
-    margin-bottom: 10px;
+    height: 20px;
+    width: 60px;
+    margin-top: 10px;
     justify-self: center;
-    align-self: end;
+    align-self: center;
 }
 
 #buttonHeader {
@@ -74,32 +82,19 @@
     justify-self: center;
 }
 
-#restart {
+#buttonWrapper {
+    width: 600px;
+    height: 600px;
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    background-color: #00FFFF;
-    line-height: 30px;
-    padding: 10px;
-    font-size: 24px;
-    color: #333399;
-    border-radius: 30px;
-    margin: 10px;
-    text-justify: center;
-    justify-self: center;
+    grid-row: 3 / 4;
+    grid-template-columns: repeat(3, 3fr);
+    grid-template-rows: repeat(3, 3fr);
+    place-self: center;
 }
 
 #turnDisplay {
     grid-column: 2 / 3;
     grid-row: 4 / 5;
-    place-self: center;
-}
-
-#buttonWrapper {
-    display: grid;
-    grid-row: 3 / 4;
-    grid-column: 2 / 3;
-    grid-template-columns: 3fr 3fr 3fr;
-    grid-template-rows: 3fr 3fr 3fr;
     place-self: center;
 }
 
